Fixed aggregation by separating it into multiple rules. Fixed calls to get_analysis_dates. Fixed plot headers and plot script in plotting rules, which are now working (close #44). Rule all has been modified according to these changes. Removed global analysis rule. List of artifacts to build now generated using all available blacklists, not just the last one (ensures that we don't miss some blacklisted artifacts). Fixed update blacklist rule, because of grep's output. Removed default blacklist.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,6 +4,7 @@ folder_blacklists: "blacklists"
 system: "local"
 prefix: "outputs"
 analysis_dir: "outputs/analysis"
+plot_dir: "outputs/analysis/plot"
 
 site: "grenoble"
 cluster: "dahu"
